<resources>
    <string name="app_name">SeKunda</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hint_write_name">Write name</string>
    <string name="button_ok">Oks</string>
    <string name="button_cancel">Cancel</string>


    <string name="menu_statistic_today">Current activities</string>
    <string name="menu_history">History</string>

    <string name="history_activity">History</string>
    <string name="settings_theme">Dark Theme</string>
    <string name="settings">Settings</string>

    <string name="channel_name">Chanel Name</string>
    <string name="channel_description">You have an unfinished task</string>

    <string name="dialog_write_name">Write the name of the task</string>
    <string name="toast_finish_first">Finish the previous task first</string>

    //SecFragment
    <string name="time_to_do">Time to do</string>
    <string name="add_button_cd">Start or stop timer</string>
    <string name="finish_prev_task">Finish the previous task first</string>
    <string name="tack_running">Task in progress</string>
    <string name="how_much_worked_dialog_label">Oops, you are gone, please tell me how much of this time you completed the task</string>

    //HowMuchWorkedDialog
    <string name="minutes">min</string>
    <string name="hour">hour</string>
    <string name="button_confirm">Confirm</string>
    <string name="seс">sec</string>

</resources>
